--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="My project-1-2.png" id="text">
         <img src="birds.png" id="birds">
         <img src="earth.png" id="earth">
-        
+        <p>ankjfkdsfnsdfldslkf;sdkf</p>
     </section>
 
     <section id="spaceman_text">
